# base16-builder-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  base16-builder.cbp
src/: .base16_builder.cpp.swp  base16_builder.cpp  install.cpp  update.cpp
src/lib/: assets.cpp  assets.h  error.cpp  error.h  sources.cpp  sources.h
